--- a/block.config.json
+++ b/block.config.json
@@ -3,8 +3,8 @@
   "type": "containerized",
   "blockId": "zuLogU_spycbro-biYPYZ",
   "source": {
-    "https": null,
-    "ssh": null,
+    "https": "https://github.com/grgshiji/raw2.git",
+    "ssh": "git@github.com:grgshiji/raw2.git",
     "branch": "block_raw2"
   },
   "parentBlockIDs": [],
